--- a/src/client/js/shell/navbar.html
+++ b/src/client/js/shell/navbar.html
@@ -1,4 +1,4 @@
-﻿ <!-- NAVIGATION -->
+ <!-- NAVIGATION -->
 <div class="navbar navbar-fixed-top">
     <div class="container">
         <ul class="nav navbar-nav pull-right">
