--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html data-ng-app="app">
 <head>
     <meta charset="utf-8" />
@@ -38,70 +38,24 @@
     <script src="/lib/moment/moment.js"></script>
 
     <!-- Bootstrapping -->
-    <script src="js/app.module.js"></script>
+    <script src="/js/_app.module.js"></script>
+    <script src="/js/config.route.js"></script>
 
     <!--core-->
-    <script src="app/core/core.module.js"></script>
-    <script src="app/core/constants.js"></script>
-    <script src="app/core/common.js"></script>
-    <script src="app/core/config.js"></script>
-    <script src="app/core/config.breeze.js"></script>
-    <script src="app/core/bootstrap.dialog.js"></script>
+    <script src="/js/core/core.module.js"></script>
 
     <!-- App data services -->
-    <script src="app/data/data.module.js"></script>
-    <script src="app/data/datacontext.js"></script>
-    <script src="app/data/entityManagerFactory.js"></script>
-    <script src="app/data/model.js"></script>
-    <script src="app/data/model.metadata.js"></script>
-    <script src="app/data/model.validation.js"></script>
-    <script src="app/data/repositories/repository.abstract.js"></script>
-    <script src="app/data/repositories/repository.attendee.js"></script>
-    <script src="app/data/repositories/repository.lookup.js"></script>
-    <script src="app/data/repositories/repository.session.js"></script>
-    <script src="app/data/repositories/repository.speaker.js"></script>
+    <script src="/js/data/_data.module.js"></script>
+    <script src="/js/data/datacontext.js"></script>
 
     <!--widgets-->
-    <script src="app/widgets/widgets.module.js"></script>
-    <script src="app/widgets/ccImgPerson.js"></script>
-    <script src="app/widgets/ccWidgetClose.js"></script>
-    <script src="app/widgets/ccWidgetMinimize.js"></script>
-    <script src="app/widgets/ccWidgetHeader.js"></script>
-    <script src="app/widgets/ccScrollToTop.js"></script>
-    <script src="app/widgets/ccSidebar.js"></script>
-    <script src="app/widgets/ccWip.js"></script>
+    
+    <!-- App - Shell -->
+    <script src="/js/shell/shell.controller.js"></script>
 
-    <!-- App - Layout -->
-    <script src="app/layout/layout.module.js"></script>
-    <script src="app/layout/shell.js"></script>
-    <script src="app/layout/sidebar.js"></script>
+    <!-- App - Home -->
+    <script src="/js/home/_home.module.js"></script>
+    <script src="js/home/home.controller.js"></script>
 
-    <!-- App - Attendee -->
-    <script src="app/attendee/attendees.module.js"></script>
-    <script src="app/attendee/config.route.js"></script>
-    <script src="app/attendee/attendees.js"></script>
-
-    <!-- App - Dashboard -->
-    <script src="app/dashboard/dashboard.module.js"></script>
-    <script src="app/dashboard/config.route.js"></script>
-    <script src="app/dashboard/dashboard.js"></script>
-
-    <!-- App - Session -->
-    <script src="app/session/session.module.js"></script>
-    <script src="app/session/config.route.js"></script>
-    <script src="app/session/sessiondetail.js"></script>
-    <script src="app/session/sessions.js"></script>
-
-    <!-- App - Speaker -->
-    <script src="app/speaker/speaker.module.js"></script>
-    <script src="app/speaker/config.route.js"></script>
-    <script src="app/speaker/speakerdetail.js"></script>
-    <script src="app/speaker/speakers.js"></script>
-
-    <!-- App - WIP -->
-    <script src="app/wip/wip.module.js"></script>
-    <script src="app/wip/config.route.js"></script>
-    <script src="app/wip/wip.js"></script>
-    <!-- endinject -->
 </body>
 </html>
