--- a/src/client/js/shell/shell.html
+++ b/src/client/js/shell/shell.html
@@ -2,7 +2,7 @@
     <div id="splash-page" data-ng-show="vm.showSplash" class="dissolve-animation">
         <div class="page-splash">
             <div class="page-splash-message">
-                CodeCamper Angular-Breeze
+                Rainbow Day Nursery
             </div>
         </div>
     </div>
@@ -11,16 +11,16 @@
     </header>
     <section id="content" class="content">
 
-        <div data-ng-view class="shuffle-animation"></div>
+        <div ui-view class="shuffle-animation"></div>
 
-        <div ngplus-overlay
+        <!--<div ngplus-overlay
              ngplus-overlay-delay-in="50"
              ngplus-overlay-delay-out="700"
              ngplus-overlay-animation="dissolve-animation">
             <img src="../../content/images/busy.gif"/>
 
             <div class="page-spinner-message overlay-message">{{vm.busyMessage}}</div>
-        </div>
+        </div>-->
 
     </section>
 </div>
