Got the home page to render. Still the old knockout bindings in place.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -56,7 +56,7 @@
 
     <!-- App - Home -->
     <script src="js/home/_home.module.js"></script>
-    <!--<script src="js/home/home.controller.js"></script>-->
+    <script src="js/home/home.controller.js"></script>
 
 </body>
 </html>
