--- a/src/client/js/home/Home.html
+++ b/src/client/js/home/Home.html
@@ -31,13 +31,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <h3>
-                                <img class="hand" src="~/Images/hand_orange.png" />Mission Statement
+                                <img class="hand" src="img/hand_orange.png" />Mission Statement
                             </h3>
                             <p class="grid-text">Appears here. Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah </p>
                         </div>
 
                         <div class="col-md-6">
-                            <h3><img class="hand" src="~/Images/hand_green.png" />Our Staff</h3>
+                            <h3><img class="hand" src="img/hand_green.png" />Our Staff</h3>
                             <p class="grid-text">Appears here. Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah </p>
                         </div>
                     </div>
@@ -45,14 +45,14 @@
                     <div class="row">
                         <div class="col-md-6">
                             <h3>
-                                <img class="hand" src="~/Images/hand_blue.png" /> Our Philosophy
+                                <img class="hand" src="img/hand_blue.png" /> Our Philosophy
                             </h3>
                             <p class="grid-text">Appears here. Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah </p>
                         </div>
 
                         <div class="col-md-6">
                             <h3>
-                                <img class="hand" src="~/Images/hand_yellow.png" />Mission Statement / Philosophy
+                                <img class="hand" src="img/hand_yellow.png" />Mission Statement / Philosophy
                             </h3>
                             <p class="grid-text">Appears here. Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah </p>
                         </div>
@@ -182,11 +182,3 @@
     </div>
 </div>
 
-@section Scripts {
-    <script type="text/javascript">
-        require(['viewmodels/vm.home'],
-            function (homeVm) {
-                homeVm.init();
-            });
-    </script>
-}
