--- a/src/client/js/shell/navbar.html
+++ b/src/client/js/shell/navbar.html
@@ -3,7 +3,7 @@
     <div class="container">
         <ul class="nav navbar-nav pull-right">
             <li>
-                <a href="/home/wip">Home</a>
+                <a ui-sref="home" >Home</a>
             </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown">
