--- a/src/client/js/shell/shell.html
+++ b/src/client/js/shell/shell.html
@@ -11,7 +11,7 @@
     </header>
     <section id="content" class="content">
 
-        <div ui-view class="shuffle-animation"></div>
+        <div ui-view="contentArea" class="shuffle-animation"></div>
 
         <!--<div ngplus-overlay
              ngplus-overlay-delay-in="50"
