--- a/src/client/index.html
+++ b/src/client/index.html
@@ -28,6 +28,7 @@
         <div data-ng-include="'js/shell/shell.html'"></div>
     </div>
 
+    <!-- Vendor Libs -->
     <script src="lib/jquery/dist/jquery.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
@@ -37,6 +38,7 @@
     <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="lib/toastr/toastr.js"></script>
     <script src="lib/moment/moment.js"></script>
+    <script src="lib/underscore/underscore.js"></script>
 
     <!-- Bootstrapping -->
     <script src="js/_app.module.js"></script>
