--- a/src/client/js/home/Home.html
+++ b/src/client/js/home/Home.html
@@ -90,7 +90,7 @@
             <div class="section-header tight">
                 <h2 class="text-center">
                     Sites
-                    <span class="subdued">(<span data-bind="text:siteCount"></span> listed)</span>
+                    <span class="subdued">(<span>{{vm.filteredSites.length}}</span> listed)</span>
                 </h2>
             </div>
             <div class="section-body row">
@@ -99,13 +99,13 @@
                     <p class="title">Filter Sites</p>
                     <hr />
                     <h3>Transportation To</h3>
-                    <ul data-bind="foreach: schools">
-                        <li class="checkbox">
+                    <ul>
+                        <li ng-repeat="school in vm.schools" class="checkbox">
                             <label>
-                                <input type="checkbox" data-bind="checked: isChecked, click: $root.handleFilterChanged">
-                                <span data-bind="text:name"></span>
+                                <input type="checkbox" data-bind="checked: isChecked" ng-click="vm.handleFilterChanged()">
+                                <span>{{school.name}}</span>
                             </label>
-                            <span class="pull-right subdued" data-bind="text:count, visible: isChecked() || $root.hasFilteredSchools()"></span>
+                            <span class="pull-right subdued" data-bind="visible: isChecked() || $root.hasFilteredSchools()">{{count}}</span>
                         </li>
                     </ul>
 
@@ -139,21 +139,21 @@
 
                 <div class="col-xs-12 col-sm-8 col-md-9">
                     <div>
-                        <ul class="site-list dark" data-bind="foreach:filteredSites">
-                            <li>
+                        <ul class="site-list dark">
+                            <li ng-repeat="site in vm.filteredSites">
                                 <div class="row">
                                     <div class="col-xs-12 col-md-6">
                                         <div class="list-text">
-                                            <h4 data-bind="text:name"></h4>
+                                            <h4>{{site.name}}</h4>
                                             <p>
-                                                <span data-bind="text:address.addressLine1"></span>
+                                                <span>{{site.address.addressLine1}}</span>
                                             </p>
                                             <p>
-                                                <span data-bind="text:address.addressLine2"></span>
+                                                <span>{{site.address.addressLine2}}</span>
                                             </p>
-                                            <p data-bind="text:phone"></p>
+                                            <p>{{site.phone}}</p>
                                             <p>&nbsp;</p>
-                                            <p class="secondary">With bus service to <span data-bind="text:schools().length"></span> school<span data-bind="visible: schools().length > 1">s</span> (<span data-bind="text:schoolShortNames"></span>)</p>
+                                            <p class="secondary">With bus service to <span>{{site.schools().length}}</span> school<span ng-show="site.schools().length > 1">s</span> (<span>{{site.schoolShortNames}}</span>)</p>
                                             <p class="more-info">
                                                 <a>More info</a>
                                             </p>
@@ -166,9 +166,9 @@
                                                 &markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:green%7Clabel:G%7C40.711614,-74.012318
                                                 &markers=color:red%7Clabel:C%7C40.718217,-73.998284" data-bind="tooltip:{title: 'Click to open in Google Maps', placement: 'center'}">*@
                                             @*<iframe width="400"
-                                                height="300"
-                                                frameborder="0" style="border:0"
-                                                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAXuaY3jzo_vEw-DwyBxmOi6orRLl7m2eI&q=Rainbow+Day+Nursery,Winnipeg+Manitoba"></iframe>*@
+                                                      height="300"
+                                                      frameborder="0" style="border:0"
+                                                      src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAXuaY3jzo_vEw-DwyBxmOi6orRLl7m2eI&q=Rainbow+Day+Nursery,Winnipeg+Manitoba"></iframe>*@
                                         </div>
                                     </div>
                                 </div>
