Returned siteRepo from datacontext.
Contains sites, schools and siteSchools (rel table)

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -46,10 +46,12 @@
 
     <!--core-->
     <script src="js/core/_core.module.js"></script>
+    <script src="js/core/datacontext.js"></script>
 
-    <!-- App data services -->
+    <!-- App data -->
     <script src="js/data/_data.module.js"></script>
-    <script src="js/data/datacontext.js"></script>
+    <script src="js/data/school.data.js"></script>
+    <script src="js/data/site.data.js"></script>
 
     <!--widgets-->
     
