--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html data-ng-app="app">
 <head>
     <meta charset="utf-8" />
@@ -57,6 +57,7 @@
     
     <!-- App - Shell -->
     <script src="js/shell/shell.controller.js"></script>
+    <script src="js/shell/nav.controller.js"></script>
 
     <!-- App - Home -->
     <script src="js/home/_home.module.js"></script>
