Roughed in site feature. Fixed data binding in nav.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -63,5 +63,8 @@
     <script src="js/home/_home.module.js"></script>
     <script src="js/home/home.controller.js"></script>
 
+        <!-- App - Site -->
+    <script src="js/site/_site.module.js"></script>
+    <script src="js/site/site.controller.js"></script>
 </body>
 </html>
