--- a/src/client/js/shell/nav.html
+++ b/src/client/js/shell/nav.html
@@ -12,20 +12,17 @@
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu with-icons with-arrow" role="menu" aria-labelledby="dropdownMenu1">
-                        <li role="presentation">
-                            <!-- ko if: $index() == 0 -->
-                            <div class="arrow-up-nav-dropdown"></div>
-                            <!-- /ko -->
-                            <a role="menuitem" tabindex="-1" href="#">
+                        <li role="presentation" ng-repeat="site in vm.sites">
+<!--                            <div class="arrow-up-nav-dropdown"></div>-->
+                            <a role="menuitem" tabindex="-1" href="#/sites/{{site.code}}">
                                 <span class="fa fa-circle icon"></span>
                                 <p>
-                                    <span data-bind="text:name"></span>
+                                    <span>{{site.name}}</span>
                                 </p>
-                                <small data-bind="with:address">
-                                    <span data-bind="text:addressLine1"></span>,
-                                    <span data-bind="text:city"></span>
-                                    <span data-bind="text:province"></span>
-                                    @*<span data-bind="text:postalCode"></span>*@
+                                <small>
+                                    <span>{{site.address.addressLine1}}</span>,
+                                    <span>{{site.address.city}}</span>
+                                    <span>{{site.address.province}}</span>
                                 </small>
                             </a>
                         </li>
