--- a/src/client/js/shell/nav.html
+++ b/src/client/js/shell/nav.html
@@ -13,7 +13,7 @@
                     </a>
                     <ul class="dropdown-menu with-icons with-arrow" role="menu" aria-labelledby="dropdownMenu1">
                         <li role="presentation" ng-repeat="site in vm.sites">
-<!--                            <div class="arrow-up-nav-dropdown"></div>-->
+                            <div ng-if="$index === 0" class="arrow-up-nav-dropdown"></div>
                             <a role="menuitem" tabindex="-1" href="#/sites/{{site.code}}">
                                 <span class="fa fa-circle icon"></span>
                                 <p>
