--- a/src/client/js/shell/shell.html
+++ b/src/client/js/shell/shell.html
@@ -11,7 +11,7 @@
     <header class="clearfix">
         <div data-ng-include="'js/shell/nav.html'"></div>
     </header>
-    <section id="content" class="content">
+    <div id="content" class="content">
 
         <div ui-view="main" class="shuffle-animation"></div>
 
@@ -24,5 +24,5 @@
             <div class="page-spinner-message overlay-message">{{vm.busyMessage}}</div>
         </div>-->
 
-    </section>
+    </div>
 </div>
