--- a/src/client/index.html
+++ b/src/client/index.html
@@ -61,7 +61,7 @@
     <script src="js/home/_home.module.js"></script>
     <script src="js/home/home.controller.js"></script>
 
-        <!-- App - Site -->
+        <!-- App - Site  (Daycare Sites) -->
     <script src="js/site/_site.module.js"></script>
     <script src="js/site/site.controller.js"></script>
 </body>
