--- a/src/client/js/home/Home.html
+++ b/src/client/js/home/Home.html
@@ -1,5 +1,5 @@
 <div class="jumbotron main-banner">
-    <div class="main-banner-background">
+    <div class="main-banner-background" du-parallax y="background">
     </div>
     <div class="container">
         <div class="title">
