--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html data-ng-app="app">
 <head>
     <meta charset="utf-8" />
@@ -23,7 +23,7 @@
     <link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link href="lib/toastr/toastr.css" rel="stylesheet" />
 
-    <!--    <link href="http://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Roboto:400,500,700" rel="stylesheet" type="text/css">-->
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Roboto:400,500,700" rel="stylesheet" type="text/css">
 
     <link href="css/site.css" rel="stylesheet" />
 </head>
