--- a/src/client/js/home/Home.html
+++ b/src/client/js/home/Home.html
@@ -135,8 +135,8 @@
                 <!-- LIST OF SITES -->
                 <div class="col-xs-12 col-sm-8 col-md-9">
                     <accordion class="site-list dark" close-others="false">
-                        <accordion-group ng-repeat="site in vm.sites" heading="{{site.name}}" is-open="site.isDisplayed">
-                            <div class="row collapse" ng-class="{ 'in' : vm.isMatchedSite(site)}">
+                        <accordion-group ng-repeat="site in vm.sites" heading="{{site.name}}" is-open="vm.isMatchedSite(site)">
+                            <div class="row">
                                 <div class="col-xs-12 col-md-6">
                                     <div class="list-text">
                                         <p>
@@ -150,7 +150,7 @@
                                         <p class="secondary">With bus service to <span>{{site.schools.length}}</span> school<span ng-show="site.schools.length > 1">s</span> 
                                         <ul>
                                             <li ng-repeat="school in site.schools">
-                                                <span ng-class="{'text-positive': school.school.isChecked }">{{school.school.name}}</span>
+                                                <span ng-class="{'highlight-text': vm.hasSchoolFilter() && vm.isCheckedSchool(school) }">{{school.school.name}}</span>
                                             </li>
                                         </ul>
 
