--- a/src/client/js/shell/shell.html
+++ b/src/client/js/shell/shell.html
@@ -13,7 +13,7 @@
     </header>
     <div id="content" class="content">
 
-        <div ui-view class="shuffle-animation"></div>
+        <div ui-view ng-animate class="shuffle-animation"></div>
 
         <!--<div ngplus-overlay
              ngplus-overlay-delay-in="50"
