--- a/src/client/js/shell/nav.html
+++ b/src/client/js/shell/nav.html
@@ -1,34 +1,36 @@
- <!-- NAVIGATION -->
+<!-- NAVIGATION -->
 <div data-ng-controller="NavController as vm">
-    <div class="navbar navbar-fixed-top">
-        <div class="container">
-            <ul class="nav navbar-nav pull-right">
-                <li>
-                    <a ui-sref="home">Home</a>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown">
-                        Sites
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu with-icons with-arrow" role="menu" aria-labelledby="dropdownMenu1">
-                        <li role="presentation" ng-repeat="site in vm.sites">
-                            <div ng-if="$index === 0" class="arrow-up-nav-dropdown"></div>
-                            <a role="menuitem" tabindex="-1" href="#/sites/{{site.code}}">
-                                <span class="fa fa-circle icon"></span>
-                                <p>
-                                    <span>{{site.name}}</span>
-                                </p>
-                                <small>
-                                    <span>{{site.address.addressLine1}}</span>,
-                                    <span>{{site.address.city}}</span>
-                                    <span>{{site.address.province}}</span>
-                                </small>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+  <div class="navbar navbar-fixed-top">
+    <div class="container">
+      <ul class="nav navbar-nav">
+        <li>
+          <a ui-sref="home">Home</a>
+        </li>
+        <li class="dropdown">
+
+          <div class="btn-group" dropdown>
+            <a class="dropdown-toggle" dropdown-toggle>
+              Sites<span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu with-icons with-arrow" role="menu">
+              <li role="presentation" ng-repeat="site in vm.sites">
+                <div ng-if="$index === 0" class="arrow-up-nav-dropdown"></div>
+                <a role="menuitem" tabindex="-1" href="#/sites/{{site.code}}">
+                  <span class="fa fa-circle icon"></span>
+                  <p>
+                    <span>{{site.name}}</span>
+                  </p>
+                  <small>
+                    <span>{{site.address.addressLine1}}</span>,
+                    <span>{{site.address.city}}</span>
+                    <span>{{site.address.province}}</span>
+                  </small>
+                </a>
+              </li>
             </ul>
-        </div>
+          </div>
+        </li>
+      </ul>
     </div>
+  </div>
 </div>
