--- a/src/client/js/shell/nav.html
+++ b/src/client/js/shell/nav.html
@@ -4,7 +4,7 @@
     <div class="container">
       <ul class="nav navbar-nav">
         <li>
-          <a ui-sref="home">Home</a>
+          <a ui-sref="home" ng-click="vm.setActive({code: 'home'})" ng-class="{active: vm.isActive({code: 'home'})}">Home</a>
         </li>
         <li class="dropdown">
 
@@ -15,7 +15,7 @@
             <ul class="dropdown-menu with-icons with-arrow" role="menu">
               <li role="presentation" ng-repeat="site in vm.sites">
                 <div ng-if="$index === 0" class="arrow-up-nav-dropdown"></div>
-                <a role="menuitem" tabindex="-1" href="#/sites/{{site.code}}">
+                <a role="menuitem" tabindex="-1" href="#/sites/{{site.code}}" ng-click="vm.setActive(site)" ng-class="{ active: vm.isActive(site)}">
                   <span class="fa fa-circle icon"></span>
                   <p>
                     <span>{{site.name}}</span>
