Simplified the shell components (removed navcontroller,etc). Now the ng-include of the shell in index.html is working properly (route fixes)

--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -38,37 +38,7 @@
     <script src="lib/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <div>
-        <!--<div data-ng-include="'js/shell/shell.html'"></div>-->
-        <div data-ng-controller="ShellController as vm">
-            <!--
-                <div id="splash-page" data-ng-show="vm.showSplash" class="dissolve-animation">
-                    <div class="page-splash">
-                        <div class="page-splash-message">
-                            Rainbow Day Nursery
-                        </div>
-                    </div>
-                </div>
-            -->
-            <header class="clearfix">
-                <div data-ng-include="'js/shell/nav.html'"></div>
-            </header>
-            <div id="content" class="content">
-
-                <div ui-view class="shuffle-animation"></div>
-
-                <!--<div ngplus-overlay
-                     ngplus-overlay-delay-in="50"
-                     ngplus-overlay-delay-out="700"
-                     ngplus-overlay-animation="dissolve-animation">
-                    <img src="../../content/images/busy.gif"/>
-
-                    <div class="page-spinner-message overlay-message">{{vm.busyMessage}}</div>
-                </div>-->
-
-            </div>
-        </div>
-    </div>
+    <div ui-view="shell"></div>
 
     <!-- Vendor Libs -->
     <script src="lib/angular/angular.js"></script>
@@ -97,8 +67,8 @@
     <script src="js/data/site.data.js"></script>
 
     <!-- App - Shell -->
-    <script src="js/shell/shell.controller.js"></script>
-    <script src="js/shell/nav.controller.js"></script>
+    <script src="js/layout/shell.controller.js"></script>
+
 
     <!-- App - Home -->
     <script src="js/home/_home.module.js"></script>
