--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -19,13 +19,18 @@
 
     <!--    <link rel="shortcut icon" href="/server/ccfavicon.ico" />-->
 
+    <!-- build:css styles/lib.css -->
     <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link href="lib/toastr/toastr.css" rel="stylesheet" />
+    <!-- endbuild -->
+
+    <!-- build:css styles/app.css-->
+    <link href="css/site.css" rel="stylesheet" />
+    <!-- endbuild -->
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Roboto:400,500,700" rel="stylesheet" type="text/css">
 
-    <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
     <!--[if lte IE 8]>
@@ -40,6 +45,7 @@
 
     <div ui-view="shell"></div>
 
+    <!-- build:js js/lib.js -->
     <!-- Vendor Libs -->
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
@@ -52,7 +58,9 @@
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/angular-scroll/angular-scroll.js"></script>
     <script src="lib/ng-parallax/angular-parallax.js"></script>
+    <!-- endbuild -->
 
+    <!-- build:js js/app.js-->
     <!-- Bootstrapping -->
     <script src="js/_app.module.js"></script>
     <script src="js/config.route.js"></script>
@@ -77,5 +85,6 @@
     <!-- App - Site  (Daycare Sites) -->
     <script src="js/site/_site.module.js"></script>
     <script src="js/site/site.controller.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
