--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -2,97 +2,97 @@
 <html data-ng-app="app">
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-  <title>Rainbow Day Nursery</title>
-  <style>
-    /* This helps the ng-show/ng-hide animations start at the right place. */
-    /* Since Angular has this but needs to load, this gives us the class early. */
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+    <title>Rainbow Day Nursery</title>
+    <style>
+        /* This helps the ng-show/ng-hide animations start at the right place. */
+        /* Since Angular has this but needs to load, this gives us the class early. */
+        
+        .ng-hide {
+            display: none !important;
+        }
+        /* This prevents any flicker that may occur while the page is loading and angular has not had a chance yet to scan the document and apply templates/etc */
+        
+        [ng\:cloak],
+        [ng-cloak],
+        [data-ng-cloak],
+        [x-ng-cloak],
+        .ng-cloak,
+        .x-ng-cloak {
+            display: none !important;
+        }
+    </style>
 
-    .ng-hide {
-      display: none !important;
-    }
-    /* This prevents any flicker that may occur while the page is loading and angular has not had a chance yet to scan the document and apply templates/etc */
+    <!--    <link rel="shortcut icon" href="/server/ccfavicon.ico" />-->
 
-    [ng\:cloak],
-    [ng-cloak],
-    [data-ng-cloak],
-    [x-ng-cloak],
-    .ng-cloak,
-    .x-ng-cloak {
-      display: none !important;
-    }
-  </style>
+    <!-- build:css styles/lib.css -->
+    <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="lib/toastr/toastr.css" rel="stylesheet" />
+    <!-- endbuild -->
 
-  <!--    <link rel="shortcut icon" href="/server/ccfavicon.ico" />-->
+    <!-- build:css styles/app.css-->
+    <link href="css/site.css" rel="stylesheet" />
+    <!-- endbuild -->
 
-  <!-- build:css styles/lib.css -->
-  <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-  <link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
-  <link href="lib/toastr/toastr.css" rel="stylesheet" />
-  <!-- endbuild -->
-
-  <!-- build:css styles/app.css-->
-  <link href="css/site.css" rel="stylesheet" />
-  <!-- endbuild -->
-
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Roboto:400,500,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Roboto:400,500,700" rel="stylesheet" type="text/css">
 
 </head>
 
 <body>
-  <!--[if lte IE 8]>
+    <!--[if lte IE 8]>
     <p class="browsehappy">
         You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank"> upgrade your browser</a> to improve your experience.
     </p>
     <![endif]-->
-  <!--[if lt IE 9]>
+    <!--[if lt IE 9]>
     <script src="lib/es5-shim/es5-shim.js"></script>
     <script src="lib/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-  <div ui-view="shell"></div>
+    <div ui-view="shell"></div>
 
-  <!-- build:js js/lib.js -->
-  <!-- Vendor Libs -->
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="lib/angular-animate/angular-animate.js"></script>
-  <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <script src="lib/toastr/toastr.js"></script>
-  <script src="lib/moment/moment.js"></script>
-  <script src="lib/underscore/underscore.js"></script>
-  <script src="lib/angular-scroll/angular-scroll.js"></script>
-  <script src="lib/ng-parallax/angular-parallax.js"></script>
-  <!-- endbuild -->
+    <!-- build:js js/lib.js -->
+    <!-- Vendor Libs -->
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <!-- <script src="lib/angular-animate/angular-animate.js"></script> -->
+    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="lib/toastr/toastr.js"></script>
+    <script src="lib/moment/moment.js"></script>
+    <script src="lib/underscore/underscore.js"></script>
+    <script src="lib/angular-scroll/angular-scroll.js"></script>
+    <!-- <script src="lib/ng-parallax/angular-parallax.js"></script> -->
+    <!-- endbuild -->
 
-  <!-- build:js js/app.js-->
-  <!-- Bootstrapping -->
-  <script src="js/_app.module.js"></script>
-  <script src="js/config.route.js"></script>
+    <!-- build:js js/app.js-->
+    <!-- Bootstrapping -->
+    <script src="js/_app.module.js"></script>
+    <script src="js/config.route.js"></script>
 
-  <!--core-->
-  <script src="js/core/_core.module.js"></script>
-  <script src="js/core/datacontext.js"></script>
+    <!--core-->
+    <script src="js/core/_core.module.js"></script>
+    <script src="js/core/datacontext.js"></script>
 
-  <!-- App data -->
-  <script src="js/data/_data.module.js"></script>
-  <script src="js/data/school.data.js"></script>
-  <script src="js/data/site.data.js"></script>
+    <!-- App data -->
+    <script src="js/data/_data.module.js"></script>
+    <script src="js/data/school.data.js"></script>
+    <script src="js/data/site.data.js"></script>
 
-  <!-- App - Shell -->
-  <script src="js/layout/shell.controller.js"></script>
+    <!-- App - Shell -->
+    <script src="js/layout/shell.controller.js"></script>
 
 
-  <!-- App - Home -->
-  <script src="js/home/_home.module.js"></script>
-  <script src="js/home/home.controller.js"></script>
+    <!-- App - Home -->
+    <script src="js/home/_home.module.js"></script>
+    <script src="js/home/home.controller.js"></script>
 
-  <!-- App - Site  (Daycare Sites) -->
-  <script src="js/site/_site.module.js"></script>
-  <script src="js/site/site.controller.js"></script>
-  <!-- endbuild -->
+    <!-- App - Site  (Daycare Sites) -->
+    <script src="js/site/_site.module.js"></script>
+    <script src="js/site/site.controller.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
