--- a/src/client/js/home/Home.html
+++ b/src/client/js/home/Home.html
@@ -1,5 +1,5 @@
 <div class="jumbotron main-banner">
-    <div class="main-banner-background" du-parallax y="background">
+    <div class="main-banner-background">
     </div>
     <div class="container">
         <div class="title">
@@ -8,8 +8,9 @@
                 <span class="normal">Day Nursery</span>
             </h1>
             <p class="lead">
-                (A summary of our approach to taking <br />
-                care of your child including the center <br />and the approach taken by the workers)
+                (A summary of our approach to taking
+                <br /> care of your child including the center
+                <br />and the approach taken by the workers)
             </p>
         </div>
     </div>
@@ -33,7 +34,8 @@
                         </div>
 
                         <div class="col-md-6">
-                            <h3><img class="hand" src="img/hand_green.png" />Our Staff</h3>
+                            <h3>
+                                <img class="hand" src="img/hand_green.png" />Our Staff</h3>
                             <p class="grid-text">Appears here. Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah </p>
                         </div>
                     </div>
@@ -85,7 +87,8 @@
             <div class="section-header tight">
                 <h2 class="text-center">
                     Sites
-                    <span class="subdued">(<span>{{vm.sites.length}}</span>)</span>
+                    <span class="subdued">(
+                        <span>{{vm.sites.length}}</span>)</span>
                 </h2>
             </div>
             <div class="section-body row">
@@ -147,12 +150,14 @@
                                         </p>
                                         <p>{{site.phone}}</p>
                                         <p>&nbsp;</p>
-                                        <p class="secondary">With bus service to <span>{{site.schools.length}}</span> school<span ng-show="site.schools.length > 1">s</span> 
-                                        <ul>
-                                            <li ng-repeat="school in site.schools">
-                                                <span ng-class="{'highlight-text': vm.hasSchoolFilter() && vm.isCheckedSchool(school) }">{{school.school.name}}</span>
-                                            </li>
-                                        </ul>
+                                        <p class="secondary">With bus service to
+                                            <span>{{site.schools.length}}</span> school
+                                            <span ng-show="site.schools.length > 1">s</span>
+                                            <ul>
+                                                <li ng-repeat="school in site.schools">
+                                                    <span ng-class="{'highlight-text': vm.hasSchoolFilter() && vm.isCheckedSchool(school) }">{{school.school.name}}</span>
+                                                </li>
+                                            </ul>
 
                                         </p>
                                         <p class="more-info">
@@ -163,7 +168,7 @@
                                 <div class="col-xs-12 col-sm-9 col-md-6">
                                     <div class="list-img">
                                         <img class="map map-round" ng-src="{{site.address.staticMapSrc}}">
-<!--
+                                        <!--
                                         <img class="map map-round" src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&zoom=13&size=350x350&maptype=roadmap
                                             &markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:green%7Clabel:G%7C40.711614,-74.012318
                                             &markers=color:red%7Clabel:C%7C40.718217,-73.998284" data-bind="tooltip:{title: 'Click to open in Google Maps', placement: 'center'}">
@@ -183,4 +188,3 @@
         </div>
     </div>
 </div>
-
