New banner approach.

--- a/src/client/js/home/Home.html
+++ b/src/client/js/home/Home.html
@@ -69,7 +69,7 @@
                 <h2 class="text-center">Registry</h2>
             </div>
             <div class="section-body">
-                <p class="center-text">Rainbow uses the Manitoba Governments Online Child Care Registry (OCCR). You can register below</p>
+                <h4 class="center-text">Rainbow uses the Manitoba Governments Online Child Care Registry (OCCR). You can register below</h4>
             </div>
             <div class="section-footer">
                 <p class="center-text">
