--- a/src/client/js/site/Site.html
+++ b/src/client/js/site/Site.html
@@ -1,6 +1,4 @@
-<div class="jumbotron jumbotron-site main-banner">
-    <div class="main-banner-background">
-    </div>
+<div class="jumbotron">
     <div class="container">
         <div class="title">
             <h1>
@@ -19,7 +17,11 @@
 
                     <div class="col-md-6">
                         <h2>Programs</h2>
-                        <p>(details about the programs offered)</p>
+                        <div ng-repeat="program in vm.site.programs" class="program-details">
+                            <p>Name: {{program.name}}</p>
+                            <p>Description: {{program.description}}</p>
+                            <p>Count: {{program.count}}</p>
+                        </div>
                     </div>
 
                     <div class="col-md-6">
@@ -102,7 +104,7 @@
                             </tr>
                         </tbody>
                     </table>
-                </div>                    
+                </div>
             </div>
         </div>
     </div>
@@ -117,7 +119,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <p class="secondary">With bus service to <span>{{vm.site.schools.length}}</span> school<span ng-show="vm.site.schools.length > 1">s</span> 
+                    <p class="secondary">With bus service to <span>{{vm.site.schools.length}}</span> school<span ng-show="vm.site.schools.length > 1">s</span>
                     <ul>
                         <li ng-repeat="school in vm.site.schools">{{school.school.name}}</li>
                     </ul>
@@ -126,7 +128,7 @@
         </div>
     </div>
 </div>
-    
+
 <div class="section color3">
     <div class="container">
         <div class="content">
@@ -137,4 +139,3 @@
         </div>
     </div>
 </div>
-
