--- a/src/client/js/home/Home.html
+++ b/src/client/js/home/Home.html
@@ -1,16 +1,15 @@
-<div class="main-banner-background">
-</div>
-<div class="container">
+<div class="container main-banner">
+    <div class="banner-image"></div>
     <div class="title">
         <h1>
             <span class="emphasis">Rainbow</span>
             <span class="normal">Day Nursery</span>
         </h1>
         <p class="lead">
-            (A summary of our approach to taking
-            <br /> care of your child including the center
-            <br />and the approach taken by the workers)
+            (A summary of our approach to taking care of your child
+            <br />including the center and the approach taken by the workers)
         </p>
+        <p>{{vm.messages}}</p>
     </div>
 </div>
 
